--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   
 
     <video width="820" height="440" autoplay muted loop controls>
-  <source src="harshugym.mp4" type="video/mp4">
+  <source src="video3.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
 
